--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <div id="root"></div>
-    <script type="module" src="./src/ts/index.tsx"></script>
+    <script type="module" src="./ts/index.tsx"></script>
 </body>
 </html>
